--- a/app/views/regions/index.html.erb
+++ b/app/views/regions/index.html.erb
@@ -12,8 +12,9 @@
   </tr>
 
   <% @regions.each do |item| %>
-      <tr>
-        <td style="border: solid 1px #d3d3d3; font-weight: bold;"><%= link_to item.name.to_s, :action => 'show', :id => item.id %></td>
+      <tr valign="middle">
+        <td style="border: solid 1px #d3d3d3; font-weight: bold;">
+         <%= link_to image_tag('Regione/reg_' + item.id.to_s + '.png', :style => "vertical-align: middle; " ) + '&nbsp;' + item.name  + '&nbsp' , region_path(item)%></td>
         <td style="border: solid 1px #d3d3d3;"> <%= item.abbrev %></td>
         <td style="border: solid 1px #d3d3d3;"> <%= item.id.to_s %></td>
         <td><%= link_to (l :button_edit), {:action => 'edit', :id => item}, :class => 'icon icon-edit' %>&nbsp;</td>
@@ -21,6 +22,3 @@
       </tr>
   <% end %>
 </table>
-
-<h1 style="color: red;">!!! importante fare in phpmyadmin ... <br> ALTER TABLE `regions` CHANGE `id` `id` INT( 11 ) NOT
-  NULL AUTO_INCREMENT</h1>
