--- a/app/views/editorial/quesito_show.html.erb
+++ b/app/views/editorial/quesito_show.html.erb
@@ -1,6 +1,6 @@
 <% if User.current && User.current.logged? %>
     <div class="fs-layout-cell fs-content clearfix">
-      <article class="fs-post fs-article">
+      <article class="fs-post2 fs-article">
         <div class="fs-postcontent fs-postcontent-0 clearfix">
           <div class="fs-content-layout">
             <div class="fs-content-layout-row">
