--- a/app/views/editorial/ricerca.html.erb
+++ b/app/views/editorial/ricerca.html.erb
@@ -6,51 +6,53 @@
           <div class="fs-layout-cell layout-item-0" style="width: 99%;">
             <h2><%= l(:label_search) %> </h2>
             <div class="fs-ricerca-header">
-              <h1>@tokens: <%= @tokens%></h1>
               <% form_tag({}, :method => :get) do %>
                   <div class="fs-ricerca-sx">
-                    <%#label_tag "search-input", l(:description_search), :class => "hidden-for-sighted" %>
+                     <%#label_tag "search-input", l(:description_search), :class => "hidden-for-sighted" %>
                     <%= text_field_tag 'q', @question, :size => 60, :id => 'search-input' %>
-                      <%= javascript_tag "Field.focus('search-input')" %>
-                      <br /> &nbsp;
+                    <%= javascript_tag "Field.focus('search-input')" %>
+                    <br/> &nbsp;
                       <span style="text-align:center; width: 100%; display:block;">
                       <%= submit_tag l(:button_submit), :name => 'submit', :class => 'fs-blu-button' %>
                     </span>
                   </div>
                   <div class="fs-ricerca-dx">
                       <span><%= project_select_tag %> <%= hidden_field_tag 'all_words', '', :id => nil %>
-                      <label><%= check_box_tag 'all_words', 1, @all_words %> <%= l(:label_all_words) %></label></span>
+                        <label><%= check_box_tag 'all_words', 1, @all_words %> <%= l(:label_all_words) %></label></span>
                         <span>&nbsp; &nbsp;&nbsp; <%= hidden_field_tag 'titles_only', '', :id => nil %>
-                        <label><%= check_box_tag 'titles_only', 1, @titles_only %> <%= l(:label_search_titles_only) %></label>
+                          <label><%= check_box_tag 'titles_only', 1, @titles_only %> <%= l(:label_search_titles_only) %></label>
                         </span>
-                    <br />
-
-                      <% @object_types.each do |t| %>
-                          <label><%= check_box_tag t, 1, @scope.include?(t) %> <%= type_label(t) %></label>   &nbsp;
-                      <% end %>
+                    <br/>
+                    <% @object_types.each do |t| %>
+                        <label><%= check_box_tag t, 1, @scope.include?(t) %> <%= type_label(t) %></label> &nbsp;
+                    <% end %>
                   </div>
               <% end %>
             </div>
-            <div class="clearfix"></div>
+            <div class="clearf@TOKENSix"></div>
             <% if @results %>
                 <div>
-                    <h3><%= l(:label_result_plural) %> (<%= @results_by_type.values.sum %>)</h3>
-                    <dl id="search-results">
-                      <% @results.each do |e| %>
-                          <dt class="<%= e.event_type %>"><%= content_tag('span', h(e.project) , :class => 'project') unless @project == e.project %> <%= link_to highlight_tokens(truncate(e.event_title, :length => 255), @tokens), event_url_fs(e)  %></dt>
-                          <dd><span class="description"><%= e.is_a?(Issue) ? highlight_tokens(truncate(e.summary, :length => 255), @tokens) : format_activity_description(e.event_description) %></span>
-                        <!--  <dd><span class="description"><%# highlight_tokens(raw(e.event_description.html_safe), @tokens) %></span>  -->
-                            <span class="author"><%= format_time(e.event_datetime) %></span></dd>
-                          <hr class="abbosepsup"/>
-                      <% end %>
-                    </dl>
-                      <div id="search-results-counts">
-                        <%= render_results_by_type(@results_by_type) unless @scope.size == 1 %>
-                      </div>
-                 </div>
+                  <h3><%= l(:label_result_plural) %> (<%= @results_by_type.values.sum %>)</h3>
+                  <dl id="search-results">  <%# @tokens %>
+                    <% @results.each do |e| %>
+                        <dt class="<%= e.event_type %>"><%= content_tag('span', h(e.project), :class => 'project') unless @project == e.project %>
+                          <br/>
+                          <%= link_to url_for_result(e) %></dt>
+                        <%#e.is_a?(Issue) ?  link_to_articolo(e, :title=> e.event_title ) : link_to (highlight_tokens(truncate(e.event_title, :length => 255), @tokens), event_url_fs(e)) %>
+                        <%# link_to highlight_tokens(truncate(e.event_title, :length => 255), @tokens), event_url_fs(e) %>
+                        <dd>
+                          <span class="description"><%= e.is_a?(Issue) ? highlight_tokens(smart_truncate(e.summary, 300), @tokens) : format_activity_description(e.event_description) %></span>
+                          <!--  <dd><span class="description"><%# highlight_tokens(raw(e.event_description.html_safe), @tokens) %></span>
+                          <span class="author"><%# format_time(e.event_datetime) %></span> --></dd>
+                        <hr class="abbosepsup"/>
+                    <% end %>
+                  </dl>
+                  <div id="search-results-counts">
+                    <%= render_results_by_type(@results_by_type) unless @scope.size == 1 %>
+                  </div>
+                </div>
             <% end %>
-            <p>
-            <center>
+            <p style="text-align: center;">
               <% if @pagination_previous_date %>
                   <%= link_to_content_update("\xc2\xab " + l(:label_previous),
                                              params.merge(:previous => 1,
@@ -61,9 +63,7 @@
                                              params.merge(:previous => nil,
                                                           :offset => @pagination_next_date.strftime("%Y%m%d%H%M%S"))) %>
               <% end %>
-            </center>
             </p>
-
             <% html_title(l(:label_search)) -%>
           </div>
         </div>
