--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1648,7 +1648,6 @@ label.fs-checkbox.fs-checked:after
    left: 0;
    top: 0;
 }
-
 .fs-post
 {
    background: #FFFFFF;
@@ -1660,6 +1659,19 @@ label.fs-checkbox.fs-checked:after
    box-shadow:0 0 3px 2px rgba(0, 0, 0, 0.1);
     padding: 2% 4%;
     width:98%;
+    margin-top: 7px;
+}
+.fs-post2
+{
+   background: #FFFFFF;
+   -webkit-border-radius:4px;
+   -moz-border-radius:4px;
+   border-radius:4px;
+   -webkit-box-shadow:0 0 3px 2px rgba(0, 0, 0, 0.1);
+   -moz-box-shadow:0 0 3px 2px rgba(0, 0, 0, 0.1);
+   box-shadow:0 0 3px 2px rgba(0, 0, 0, 0.1);
+    padding: 2% 1%;
+    width:99%;
     margin-top: 7px;
 }
 
