--- a/app/views/comunes/index.html.erb
+++ b/app/views/comunes/index.html.erb
@@ -7,22 +7,22 @@
  </div>
                          <br />
 <% if @comunes.count > 0 %>
-<table>
+<table id="ico-regions">
   <tr style="text-align:left;">
-    <%= sort_header_tag('comune', :title => l(:label_comune), :style => 'width: 55%;') %>
-    <%= sort_header_tag('regione', :title => l(:label_region), :style => 'width: 15%;') %>
-    <%= sort_header_tag('provincia', :title => l(:label_province), :style => 'width: 15%;') %>
+    <%= sort_header_tag('comune', :title => l(:label_comune), :style => 'width: 50%;') %>
+    <%= sort_header_tag('regione', :title => l(:label_region), :style => 'width: 20%;') %>
+    <%= sort_header_tag('provincia', :title => l(:label_province), :style => 'width: 20%;') %>
     <th style="width: 5%;"></th>
     <th style="width: 5%;"></th>
   </tr>
 
-<% @comunes.each do |comune| %>
-  <tr valign="bottom">
-    <td style="border-bottom: solid 1px #d3d3d3; font-weight: bold;"><%= link_to comune.name, comune %></td>
-    <td  style="border-bottom: solid 1px #d3d3d3; font-weight: bold;"><%= link_to image_tag('Regione/reg_' + comune.province.region.id.to_s + '.png') + '&nbsp;' + comune.province.region.name, region_path(comune.province.region) %>&nbsp;</td>
-    <td style="border-bottom: solid 1px #d3d3d3; font-weight: bold;"><%= link_to comune.province.name, comune_path(comune.province) %></td>
-    <td><%= link_to (l:button_edit), edit_comune_path(comune), :class => 'icon icon-edit' %>&nbsp;</td>
-    <td><%= link_to (l:button_delete), comune, :confirm => 'Sei certo di voler eliminare?', :method => :delete, :class => 'icon icon-del' %></td>
+<% @comunes.each do |item| %>
+  <tr>
+    <td><%= link_to item.name, item %></td>
+    <td><%=  user_role_iconized(item.province.region, :size => "s", :icon_for => 'r-' + item.province.region.id.to_s , :text => item.province.region.name)%></td>
+    <td><%= link_to item.province.name, province_path(item.province) %></td>
+    <td><%= link_to (l:button_edit), edit_comune_path(item), :class => 'icon icon-edit' %>&nbsp;</td>
+    <td><%= link_to (l:button_delete), item, :confirm => 'Sei certo di voler eliminare?', :method => :delete, :class => 'icon icon-del' %></td>
   </tr>
 <% end %>
 </table>
