--- a/app/views/provinces/index.html.erb
+++ b/app/views/provinces/index.html.erb
@@ -2,23 +2,22 @@
 <span style="display: inline; position: absolute; left: 65%; margin-top: -30px;" >
   <%= link_to l(:label_new_province), new_province_path, :class => 'icon icon-add' %></span>
 <br />
-<table>
+<table id="ico-regions">
   <tr style="text-align:left;">
 
-    <%= sort_header_tag('provincia', :title => l(:label_province), :style => 'width: 55%;') %>
+    <%= sort_header_tag('provincia', :title => l(:label_province), :style => 'width: 50%;') %>
     <th style="width: 10%;"><%=l :label_sigla %></th>
-    <th style="width: 5%;">id</th>
-    <%= sort_header_tag('regione', :title => l(:label_region), :style => 'width: 15%;') %>
+    <%= sort_header_tag('regione', :title => l(:label_region), :style => 'width: 30%;') %>
     <th style="width: 5%;"></th>
     <th style="width: 5%;"></th>
   </tr>
 
 <% @provinces.each do |item| %>
   <tr>
-    <td style="border: solid 1px #d3d3d3; font-weight: bold;"><%= link_to item.name, item %></td>
-    <td style="border: solid 1px #d3d3d3;"> <%=  item.sigla  %></td>
-    <td style="border: solid 1px #d3d3d3;"> <%=  item.id.to_s  %></td>
-    <td style="border: solid 1px #d3d3d3;"><%= link_to image_tag('Regione/reg_' + item.region.id.to_s + '.png') + '&nbsp;' + item.region.name, region_path(item.region)  %></td>
+    <td style="font-weight: bold;"><%= link_to item.name, item %></td>
+    <td> <%=  item.sigla  %></td>
+    <td>  <%= user_role_iconized(item.region, :size => "s", :icon_for => 'r-' + item.region.id.to_s , :text => item.region.name)%></td>
+    <%# link_to image_tag('Regione/reg_' + item.region.id.to_s + '.png') + '&nbsp;' + item.region.name, region_path(item.region)  %>
       <td><%= link_to (l:button_edit), edit_province_path(item), :class => 'icon icon-edit' %>&nbsp;</td>
     <td><%= link_to (l:button_delete), item, :confirm => 'Sei certo di voler eliminare?', :method => :delete, :class => 'icon icon-del' %></td>
   </tr>
