fee control e blocco statio utente

--- a/app/views/editorial/_blocco_sidebar1.html.erb
+++ b/app/views/editorial/_blocco_sidebar1.html.erb
@@ -1,4 +1,5 @@
 <div class="fs-layout-cell fs-sidebar1 clearfix">
+  <%= render :partial => 'blocco_user_state' %>
   <%= render :partial => 'blocco_informa' %>
   <% unless @topsection.nil? && @top_menu.nil? %>
       <%= render :partial => 'blocco_quick_search' %>
