mailer and fee accounting

--- a/app/views/editorial/_blocco_informa.html.erb
+++ b/app/views/editorial/_blocco_informa.html.erb
@@ -4,7 +4,7 @@
       <h3 class="t"><%= Setting.app_title %> informa: </h3>
     </div>
     <div class="fs-blockcontent">
-      <div id="fs_informa" class="fs-informna">
+      <div id="fs_informa" class="fs-informa">
         <%= Setting.info_fs %>
       </div>
     </div>
