--- a/app/views/editorial/_blocco_quick_search.html.erb
+++ b/app/views/editorial/_blocco_quick_search.html.erb
@@ -4,7 +4,7 @@
       <h3 class="t" title="Digita almeno 3 caratteri per iniziare la ricerca">Mi sento fortunato: </h3>
     </div>
     <div class="fs-blockcontent">
-      <div id="fs_informa" class="fs-informna">
+      <div id="fs_informa" class="fs-informa">
         <%= text_field_tag :qs_search %>
       </div>
     </div>
