--- a/app/views/editorial/_blocco_user_state.html.erb
+++ b/app/views/editorial/_blocco_user_state.html.erb
@@ -1,11 +1,10 @@
 <% if User.current.logged? && (User.current.state.length > 0)  %>
   <div class="fs-block clearfix">
     <div class="fs-blockheader">
-      <h3 class="t"><% link_to(User.current.name_formatter, my_profile_show_url, :class => 'button-grey') %></h3>
+      <h3 class="t"><%= link_to(User.current.hide_name, my_profile_show_url, :class => 'button-grey') %></h3>
     </div>
     <div class="fs-blockcontent">
-      <div id="fs_informa" class="fs-informna">
-        <p><%= User.current.hide_name %></p>
+      <div id="fs_informa" class="fs-informa">
         <p><%= User.current.state %></p>
       </div>
     </div>
