--- a/app/views/account/lost_password.html.erb
+++ b/app/views/account/lost_password.html.erb
@@ -1,17 +1,107 @@
-<h2><%=l(:label_username_lost)%></h2>
+<script type="text/javascript">
+    $(document).ready(function () {
 
-<div class="box">
-<% form_tag({:action=> "lost_password"}, :class => "tabular") do %>
+        $("#accordion-basic").accordion({heightStyle:"content", autoHeight:false, collapsible:true, active:false });
 
-<p><label for="mail"><%=l(:field_mail)%> <span class="required">*</span></label>
-<%= text_field_tag 'mail', nil, :size => 40 %>
-<%= submit_tag l(:button_submit) %></p>
+    });
+</script>
+<div class="fs-layout-cell post-layout-item-2" style="max-width: 640px; border-right: solid 10px transparent;">
+  <div class="fs-content-layout-row">
+    <div class="fs-layout-cell post-layout-item-2" style="width: 98%">
+      <article class="fs-post fs-article clearfix" style="min-height: 400px">
+        <div id="fs-helpme-header">Problemi di accesso all'account</div>
+        <br>
 
-<% end %>
-</div>
+        <p>Se non riesci ad accedere, seleziona il tuo problema tra quelli indicati di seguito
 
-<% if Setting.lost_password? %>
-  <div class='fs-pass'>
-    <%= link_to l(:label_password_recovery), :controller => 'account', :action => 'password_recovery' %>
+        <p/>
+
+        <p><br></p>
+
+        <div id="accordion-basic">
+
+          <h6 class="accordion-basic"> &nbsp;&nbsp;&nbsp;&nbsp; Non ricordo più i dati di login ma ricordo la mail</h6>
+
+          <div class="fs-helpme-content">
+            <p> Per recuperare i tui dati è necessario conoscere la mail che usi su Fiscoport quella alla quale ti
+              vengono recapitate le newsletter e le cominucazioni.
+              La procedura ti invierà una mail alla casella di posta specificata dove trovera il tuo login inoltre
+              potrai
+              cambiare la tua password.
+            </p>
+            <br/>
+
+            <% form_tag({:action => "lost_password"}, {:class => "fs-lost_password"}) do %>
+                <span> <%= text_field_tag 'mail', nil, :placeholder => 'Email' %></span>
+                <span class="fs-lost_password-btn"> <%= submit_tag l(:button_submit), :class => "fs-giallo-button" %> </span>
+            <% end %>
+            <br />
+          </div>
+
+          <h6 class="accordion-basic">&nbsp;&nbsp;&nbsp;&nbsp; Non ricordo la mia mail e non riesco ad accedere</h6>
+
+          <div class="fs-helpme-content">
+            <br/>
+
+            <p> Per il campo Login di accesso al sito puoi utilizzare indifferentemente una username o l'indirizzio
+              email.
+              Se la tua mail corrisponde al tuo login non è possibile avere accesso immediato ai contenuti protetti del
+              sito.
+              Prova a cercare nelle tue caselle di posta e verifica a quale indirizzo arrivano le comunicazioni e la
+              newsletter Fiscosport.
+            </p>
+
+            <p>
+              Se non sei riuscito a recuperare il tuo indirizzo mail occorre necessariamente contattare Fiscosport.
+              <br/> Le informazioni le puoi trovare in alto a destra premendo il pulsante
+              "Contattaci".
+              Se invii una mail ricordati di specificare il tuo nome e cognome , la città, la username , l'associazione
+              sportiva
+              o comunque qualunque dato che consenta a Fiscosport di identificarti univocamente tra tutti gli utenti.
+            </p>
+            <br/>
+          </div>
+          <h6 class="accordion-basic">&nbsp;&nbsp;&nbsp;&nbsp; Ritengo che qualcun'altro sta utilizzando il mio
+            account</h6>
+
+          <div class="fs-helpme-content">
+            <br/>
+            <strong> Posso ancora accedere al sito </strong>
+
+            <p>Una volta fatto l'accesso trovi in alto a destra l'accesso alla pagina personale. <br/>
+              Nella tua pagina personale puoi cambiare direttamente il nome utente (username o login)
+              inoltre puoi richiedere il cambio della password. </p>
+            <strong> Non posso accedere al sito </strong>
+
+            <p>
+              E' necessario provare a cambiare la password la procedura è descritta nell'opzione : Vorrei cambiare la
+              mia password. <br/>
+              Se hai ancora problemi e non sei riuscito ad accedere occorre contattare Fiscosport.
+              <br/> Tutte le informazioni le puoi trovare in alto a destra premendo il pulsante "Contattaci".
+            </p>
+            <br/>
+          </div>
+          <h6 class="accordion-basic">&nbsp;&nbsp;&nbsp;&nbsp; Vorrei cambiare la mia password </h6>
+
+          <div class="fs-helpme-content">
+            <br>
+            <p>
+              Inserisci la tua mail nel campo sotto e premi invio . A breve riceverai una mail con indicata la procedura
+              per il cambio password .
+            </p>
+            <br/>
+            <% form_tag({:action => "lost_password"}, {:class => "fs-lost_password"}) do %>
+                <span> <%= text_field_tag 'mail', nil, :placeholder => 'Email' %></span>
+                <span class="fs-lost_password-btn"> <%= submit_tag l(:button_submit), :class => "fs-giallo-button" %> </span>
+            <% end %>
+            <br />
+          </div>
+        </div>
+        <div class="cleared"></div>
+      </article>
+    </div>
   </div>
-<% end %>
+</div>
+<%= render :partial => 'editorial/blocco_sidebar1' %>
+
+
