--- a/app/views/account/_tramenu_login.html.erb
+++ b/app/views/account/_tramenu_login.html.erb
@@ -61,7 +61,7 @@
       <%= javascript_tag "$('#username').focus();" %>
       <% if Setting.lost_password? %>
           <div class='fs-pass'>
-            <%= link_to l(:label_password_lost), :controller => 'account', :action => 'lost_password' %>
+            <%= link_to l(:label_access_lost), :controller => 'account', :action => 'lost_password' %>
           </div>
       <% end %>
     </div>
