--- a/app/views/editorial/_blocco_art_evidenziati.html.erb
+++ b/app/views/editorial/_blocco_art_evidenziati.html.erb
@@ -1,33 +1,28 @@
-<!-- ---- inizio art-evidenziati -->
 <div class="fs-block clearfix">
-      <div class="fs-blockheader">
-        <h3 class="t">Articoli in Evidenza</h3> <!-- <span style="font-size: 14px; font-weight: bold;">:(<%#@issues.count %>)</span> -->
-      </div>
+  <div class="fs-blockheader">
+    <h3 class="t">Articoli in
+      Evidenza</h3> <!-- <span style="font-size: 14px; font-weight: bold;">:(<%#@issues.count %>)</span> -->
+  </div>
   <% if @issues && @issues.any? %>
       <div class="fs-blockcontent">
         <% for articolo in @issues %>
-            <h1 style="display:none">__PARTIAL ARTICOLO PINNED chiamato da _blocco articoli evidenziati</h1>
-
             <div class="fs-postcontent fs-postcontent-0 clearfix">
               <div class="fs-content-layout">
                 <div class="fs-content-layout-row">
                   <div class="fs-layout-cell layout-item-0" style="width: 100%">
-                    <h6 class="fs-postheader">
-                      <%=  link_to_articolo(articolo, :title => h(truncate(articolo.subject, :length => 50))) %>
-                    </h6>
-                    <%# articolo.section.issues.count %>
+                    <h4 class="fs-postheader">
+                      <%= link_to_articolo(articolo, :title => h(truncate(articolo.subject, :length => 50))) %>
+                    </h4>
                     <span class="fs-postauthoricon">
             <%= h articolo.author %>
           </span>
                     <br/>
-
                     <div class="fs-postcontent">
                       <div class="fs-box-link">
-                        <%= link_to_articolo(articolo ,:title => h(smart_truncate(articolo.summary, 130))) %>
+                        <%= link_to_articolo(articolo, :title => h(smart_truncate(articolo.summary, 130))) %>
                         <br/>
                       </div>
                     </div>
-                    <%# link_to "Continua... ", link_to_articolo(articolo) %>
                     <p class="separticle"></p>
                   </div>
                 </div>
@@ -35,7 +30,6 @@
             </div>
         <% end %>
         <br/>
-        <%# link_to l(:label_issues_view_all), :action => 'articoli' %>
       </div>
   <% else %>
       <p class="nodata"><%= l(:label_no_data) %></p>
