--- a/app/views/editorial/_blocco_sidebar1.html.erb
+++ b/app/views/editorial/_blocco_sidebar1.html.erb
@@ -1,6 +1,6 @@
 <div class="fs-layout-cell fs-sidebar1 clearfix">
-  <%= render :partial => 'blocco_user_state' %>
-  <%= render :partial => 'blocco_informa' %>
+  <%= render :partial => 'editorial/blocco_user_state' %>
+  <%= render :partial => 'editorial/blocco_informa' %>
   <% unless @topsection.nil? && @top_menu.nil? %>
       <%= render :partial => 'editorial/blocco_quick_search' %>
   <% end %>
