--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -110,17 +110,15 @@
           });
 
           if ($('#fs-flash-dialog').html().trim().length > 0) {
-
-              $('#fs-flash-dialog').dialog({bgiframe: true, dialogClass: 'xxxxx', resizable: true, draggable: true, modal: true, height: 334, width: 450, autoOpen:true, show: 'fade'});
+                var fclass = $('#flashme').html()
+              $('#fs-flash-dialog').dialog({bgiframe: true, dialogClass: fclass, resizable: true, draggable: true, modal: true, height: 334, width: 450, autoOpen:true, show: 'fade'});
                $('#fs-flash-dialog').dialog('open');
               setTimeout(function() {
 
-                  $('#fs-flash-dialog').fadeOut(22400, function () {
+                  $('#fs-flash-dialog').fadeOut(2000, function () {
                        $('#fs-flash-dialog').dialog("destroy")
                    });
-
-
-                        }, 16400);
+                        }, 6000);
                         };
 
 
@@ -187,9 +185,11 @@
     </nav>
     <div id="fs-flash-dialog" style="display:none;">
       <% flash.each do |key, msg| %>
-           <div class='<%= key.to_s %>-dialog '>
-          <p><span class='<%= key.to_s %>'> </span>  <%= msg %> </p></div>
-      <% end %></div>
+          <p><span class='<%= key.to_s %>'> </span>  <%= msg %> </p>
+          <div> <% @f = key.to_s  %></div>
+      <% end %>
+    </div>
+    <div id="flashme" style="display:none;">  <%= @f  %>-dialog</div>
     <div class="fs-layout-wrapper clearfix">
       <div class="fs-content-layout">
         <div class="fs-content-layout-row">
